trunk/Archive2/e1/2f70a730beb77e/output
main.cpp: In instantiation of 'void g(T&& ...) [with T = {int}]':
main.cpp:12:8:   required from here
main.cpp:7:35: error: invalid conversion from 'int' to 'void*' [-fpermissive]
     return f(std::forward<T>(t)...);
                                   ^
